@@ -15,6 +15,8 @@ Unreleased changes
    HBASE-582   HBase 554 forgot to clear results on each iteration caused by a filter
                (Clint Morgan via Stack)
    HBASE-532   Odd interaction between HRegion.get, HRegion.deleteAll and compactions
+   HBASE-590   HBase migration tool does not get correct FileSystem or root
+               directory if configuration is not correct
 
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
